# ctoaas-crawler

./: apify_page_function.js  crawlee_vs_apify.md  skills-lock.json
agentic-crawler/: .env.example  .gitignore  README.md  implementation.md  package-lock.json  package.json
agentic-crawler-py/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agentic-crawler-py/scripts/: test_container.py
agentic-crawler-py/src/: main.py
agentic-crawler-py/src/agents/: base_extraction_agent.py  discovery_agent.py  faq_extraction_agent.py  general_extraction_agent.py
agentic-crawler-py/src/crawler/: crawler.py
agentic-crawler-py/src/llm/: client.py
agentic-crawler-py/src/schemas/: faq.py  general.py
agentic-crawler-py/src/utils/: html_cleaner.py  output_writer.py
agentic-crawler/src/: index.ts
agentic-crawler/src/agents/: discoveryAgent.ts  extractionAgent.ts
agentic-crawler/src/crawler/: faqCrawler.ts
agentic-crawler/src/llm/: client.ts
agentic-crawler/src/schemas/: faq.ts
agentic-crawler/src/utils/: htmlCleaner.ts
crawlee-crawler/askgov-scraper/: .env-example  .gitignore  README.md  package-lock.json  package.json
crawlee-crawler/askgov-scraper/src/: main.js
